--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <!--Блок Hero-->
     <main>
         <section class="hero">
-            <div class="container">
+            <div class="container-hero">
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-                <button class="btn">Заказать услугу</button>
+                <button class="hero-button">Заказать услугу</button>
             </div>
         </section>
 
@@ -60,7 +60,7 @@
                 <h2 class="section-title" hidden>Наши преимущества</h2>
 
                 <ul class="list feature-list">
-                    <!--only hover-->
+                    <!-- only hover -->
                     <li class="item">
                         <img src="./images/Vector.svg" alt="Веб студия" />
                         <h3 class="list-title">Внимание к деталям</h3>
@@ -132,7 +132,8 @@
                         <ul class="list social-list">
                             <li class="social-item">
                                 <a href="#" class="social-link" target="_blank" rel="noopener noreferrer"
-                                    aria-label="ссылка на Instagram">Instagram</a>
+                                    aria-label="ссылка на Instagram"><img src="" alt="instagram link" width="20">
+                                    Instagram</a>
                             </li>
                             <li class="social-item">
                                 <a href="#" class="social-link" target="_blank" rel="noopener noreferrer"
