--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
                 <ul class="list feature-list">
                     <!-- only hover -->
                     <li class="item">
+
+                        
+                        <div class="feature-icon">
+                            
+
+                    </div>
                         <img src="./images/Vector.svg" alt="Веб студия" />
                         <h3 class="list-title">Внимание к деталям</h3>
                         <p class="description">
