--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
                             <img src="./images/technocrk.jpg" alt="Технокряк" width="370">
 
                             <div class="description">
-                                <h2 class="section-title-list">Технокряк</h2>
+                                <h2 class="portfolio-title">Технокряк</h2>
                                 <p class="list-description">Веб-сайт</p>
                                 <p class="link-description">
                                     Технокряк это современная площадка распространения коронавируса.
@@ -86,7 +86,7 @@
                         <a href="#" class="list-link">
              <img src="./images/basket.jpg" alt="Постер New Orlean vs Golden Star" width="370" />
                             <div class="description">
-                                <h2 class="section-title-list">Постер New Orlean vs Golden Star</h2>
+                                <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
                                 <p class="list-description">Дизайн</p>
                                 <p class="link-description">
                                     Технокряк это современная площадка распространения коронавируса.
@@ -100,7 +100,7 @@
                         <a href="#" class="list-link">
                             <img src="./images/seafoods.jpg" alt="" width="370" />
                             <div class="description">
-                                <h2 class="section-title-list">Ресторан Seafood</h2>
+                                <h2 class="portfolio-title">Ресторан Seafood</h2>
                                 <p class="list-description">Приложение</p>
                                 <p class="link-description">
                                     Технокряк это современная площадка распространения коронавируса.
@@ -114,7 +114,7 @@
                         <a href="#" class="list-link">
                             <img src="./images/Prime.jpg" alt="" width="370" />
                             <div class="description">
-                                <h2 class="section-title-list">Проект Prime</h2>
+                                <h2 class="portfolio-title">Проект Prime</h2>
                                 <p class="list-description">Маркетинг</p>
                                 <p class="link-description">
                                     Технокряк это современная площадка распространения коронавируса.
@@ -129,7 +129,7 @@
                             <img src="./images/boxes.jpg" alt="" width="370" />
                             <div class="description">
 
-                                <h2 class="section-title-list">Проект Boxes</h2>
+                                <h2 class="portfolio-title">Проект Boxes</h2>
                                 <p class="list-description">Приложение</p>
                                 <p class="link-description">
                                     Технокряк это современная площадка распространения коронавируса.
@@ -144,7 +144,7 @@
                             <img src="./images/inspiration-has-no-borders.jpg" alt="" width="370" />
                             <div class="description">
 
-                                <h2 class="section-title-list">Inspiration has no Borders</h2>
+                                <h2 class="portfolio-title">Inspiration has no Borders</h2>
                                 <p class="list-description">Веб-сайт</p>
                                 <p class="link-description">
                                     Технокряк это современная площадка распространения коронавируса.
@@ -159,7 +159,7 @@
                             <img src="./images/Limited-Edition.jpg" alt="" width="370" />
                             <div class="description">
 
-                                <h2 class="section-title-list">Издание Limited Edition</h2>
+                                <h2 class="portfolio-title">Издание Limited Edition</h2>
                                 <p class="list-description">Дизайн</p>
                                 <p class="link-description">
                                     Технокряк это современная площадка распространения коронавируса.
@@ -174,7 +174,7 @@
                             <img src="./images/lab.jpg" alt="" width="370" />
                             <div class="description">
 
-                                <h2 class="section-title-list">Проект LAB</h2>
+                                <h2 class="portfolio-title">Проект LAB</h2>
                                 <p class="list-description">Маркетинг</p>
                                 <p class="link-description">
                                     Технокряк это современная площадка распространения коронавируса.
@@ -189,7 +189,7 @@
                             <img src="./images/growing-business.jpg" alt="" width="370" />
                             <div class="description">
 
-                                <h2 class="section-title-list">Growing Business</h2>
+                                <h2 class="portfolio-title">Growing Business</h2>
                                 <p class="list-description">Приложение</p>
                                 <p class="link-description">
                                     Технокряк это современная площадка распространения коронавируса.
