--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
                     <!-- only hover -->
                     <li class="item">
 
-                        
+
                         <div class="feature-icon">
                             
 
                     </div>
                         <img src="./images/Vector.svg" alt="Веб студия" />
-                        <h3 class="list-title">Внимание к деталям</h3>
+                        <h3 class="features-title">Внимание к деталям</h3>
                         <p class="description">
                             Идейные соображения, а также начало повседневной работы по
                             формированию позиции.
@@ -77,7 +77,7 @@
                     </li>
                     <li class="item">
                         <img src="./images/Vector-2.svg" alt="Веб студия" />
-                        <h3 class="list-title">Пунктуальность</h3>
+                        <h3 class="features-title">Пунктуальность</h3>
                         <p class="description">
                             Задача организации, в особенности же рамки и место обучения
                             кадров влечет за собой.
@@ -85,7 +85,7 @@
                     </li>
                     <li class="item">
                         <img src="./images/Vector-3.svg" alt="Веб студия" />
-                        <h3 class="list-title">Планирование</h3>
+                        <h3 class="features-title">Планирование</h3>
                         <p class="description">
                             Равным образом консультация с широким активом в значительной
                             степени обуславливает.
@@ -93,7 +93,7 @@
                     </li>
                     <li class="item">
                         <img src="./images/Vector-4.svg" alt="Веб студия" />
-                        <h3 class="list-title">Современные технологии</h3>
+                        <h3 class="features-title">Современные технологии</h3>
                         <p class="description">
                             Значимость этих проблем настолько очевидна, что реализация
                             плановых заданий.
