--- a/contacts.html
+++ b/contacts.html
@@ -25,7 +25,7 @@
               <a href="./index.html" class="nav-link">Студия</a>
             </li>
             <li class="item">
-              <a href="./portfolio-new.html" class="nav-link">Портфолио</a>
+              <a href="./portfolio.html" class="nav-link">Портфолио</a>
             </li>
             <li class="item">
               <a href="./contacts.html" class="nav-link current">Контакты </a>
