--- a/index.html
+++ b/index.html
@@ -61,38 +61,32 @@
 
                 <ul class="list feature-list">
                     <!-- only hover -->
-                    <li class="item">
-
-
-                        <div class="feature-icon">
-                            
-
-                    </div>
-                        <img src="./images/Vector.svg" alt="Веб студия" />
+                    <li class="item icon-antena">
+                       <!-- <img src="./images/Vector.svg" alt="Веб студия" /> -->
                         <h3 class="features-title">Внимание к деталям</h3>
                         <p class="description">
                             Идейные соображения, а также начало повседневной работы по
                             формированию позиции.
                         </p>
                     </li>
-                    <li class="item">
-                        <img src="./images/Vector-2.svg" alt="Веб студия" />
+                    <li class="item icon-clock">
+                        <!-- <img src="./images/Vector-2.svg" alt="Веб студия" /> -->
                         <h3 class="features-title">Пунктуальность</h3>
                         <p class="description">
                             Задача организации, в особенности же рамки и место обучения
                             кадров влечет за собой.
                         </p>
                     </li>
-                    <li class="item">
-                        <img src="./images/Vector-3.svg" alt="Веб студия" />
+                    <li class="item icon-comp">
+                        <!-- <img src="./images/Vector-3.svg" alt="Веб студия" /> -->
                         <h3 class="features-title">Планирование</h3>
                         <p class="description">
                             Равным образом консультация с широким активом в значительной
                             степени обуславливает.
                         </p>
                     </li>
-                    <li class="item">
-                        <img src="./images/Vector-4.svg" alt="Веб студия" />
+                    <li class="item icon-astro">
+                        <!-- <img src="./images/Vector-4.svg" alt="Веб студия" /> -->
                         <h3 class="features-title">Современные технологии</h3>
                         <p class="description">
                             Значимость этих проблем настолько очевидна, что реализация
